--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "glob": "^7.1.3",
     "helmet": "^3.13.0",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
