--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Amos Tobi",
   "license": "MIT",
   "dependencies": {
+    "boom": "^7.2.0",
     "chalk": "^2.4.1",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -29,6 +30,7 @@
     "helmet": "^3.13.0",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
+    "mongodb": "^3.1.6",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
     "winston": "^2.4.1"
