--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.0.1",
     "winston": "^2.4.1"
   },
   "devDependencies": {
